syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="ProductSec";
//Generated By BrewRobot:Thu Dec 07 11:40:23 CST 2017

message PBIFE_trade_subscribeProductSec{
	///ife/trade/subscribeProductSec.html

	string remainBuyAmount = 1; //,剩余可购金额,String,不校验,否,


}

message Ret_PBIFE_trade_subscribeProductSec{
	///ife/trade/subscribeProductSec.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_trade_subscribeProductSec data=3;


}

message REQ_PBIFE_trade_subscribeProductSec{
	///ife/trade/subscribeProductSec.html

	string productCode = 1; //,产品编号,String,不校验,否,

	string delegateNum = 2; //,购买金额,String,不校验,否,
	
	string version = 3; //,版本信息,String,不校验,否,
}